--- a/ProyectoJSF/WebContent/numero.xhtml
+++ b/ProyectoJSF/WebContent/numero.xhtml
@@ -9,15 +9,13 @@
         <title>Java Server Faces 2.2</title>
     </h:head>
     <h:body>
-    	<h3>Bienvenido</h3>
+    	<h3>Numero</h3>
     	<h:form>
-    	   <h:inputText value="#{holaMundo.nombre}"></h:inputText>
-    	   <h:commandButton value="Welcome Me" action="wellcome"></h:commandButton>
+    	   <h:inputText value="#{numeroBeanM.n}"></h:inputText>
+    	   <h:commandButton value="incrementar Numero" action="#{numeroBeanM.mostrar}"></h:commandButton>
     	</h:form>
     	
-    	<h:form>
-    		<h:commandButton value="Mostrar" action="#{holaMundo.mostrarNombre}" />
-    	</h:form>
+
     	
     </h:body>
 </html>
